--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nf start",
-    "reset": "script/reset",
+    "stop": "script/reset",
     "benchmark": "script/benchmark"
   },
   "author": "Hunter Loftis <hunter@heroku.com>",
@@ -13,11 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.2.1",
+    "aws-sdk": "^2.3.15",
     "body-parser": "^1.5.0",
     "compression": "^1.2.0",
     "cookie-session": "^1.0.2",
     "express": "^4.9.7",
     "foreman": "^0.4.2",
+    "imagemagick": "^0.1.3",
     "jackrabbit": "^2.3.0",
     "jade": "^1.5.0",
     "lodash": "^2.4.1",
@@ -26,6 +28,7 @@
     "mongoose-cache": "git://github.com/hunterloftis/mongoose-cache",
     "mongoose-timestamp": "^0.3.0",
     "morgan": "^1.2.0",
+    "node-env-file": "^0.1.8",
     "node-uuid": "^1.4.1",
     "promise": "^5.0.0",
     "serve-favicon": "~2.0.1",
