--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aws-sdk": "^2.3.15",
     "body-parser": "^1.5.0",
     "compression": "^1.2.0",
+    "cookie-parser": "^1.4.2",
     "cookie-session": "^1.0.2",
     "express": "^4.9.7",
     "foreman": "^0.4.2",
